# tuxmath

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Info.plist  Makefile  Makefile.am  Makefile.am.bak  Makefile.in  Portfile  README  aclocal.m4  autogen.sh  config.h.cmake  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  cross-configure.sh  intl-patch  mac_cplibs.sh  notesblurb  t4k_common.mk  tmlin.sh  tmwin.sh  tuxmath.desktop  tuxmath.sh  tuxmath.spec  tuxmath.spec.in  tuxmath_1.8.0.orig.tar.gz.delta  tuxmath_1.8.0.orig.tar.gz.id  tuxmath_2.0.3.orig.tar.gz.delta  tuxmath_2.0.3.orig.tar.gz.id  tuxmath_preview.spec.in
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
buildw32/: cross-configure.sh  cross-make.sh  setup_mingw-cross-env.sh  t4k_common.mk  tmwin.sh
cmake-modules/: ConfigureChecks.cmake  ConfigureChecksIntl.cmake  FindICONV.cmake  FindIconv.cmake  FindMSGFMT.cmake  FindSDL_Pango.cmake  FindSDL_gfx.cmake  FindTux4Kids-common.cmake  MacroBoolTo01.cmake  T4K_Sugar.cmake
data/: CMakeLists.txt  Makefile.am  Makefile.in  svn-commit.tmp
data/fonts/: Makefile.am  Makefile.in
data/images/: Makefile.am  Makefile.in  icon.xpm  tuxmath.icns
data/images/backgrounds/: Makefile.am  Makefile.in
data/images/cities/: Makefile.am  Makefile.in
data/images/comets/: Makefile.am  Makefile.in
data/images/factoroids/: Makefile  Makefile.am  Makefile.in
data/images/factroids/: Makefile  Makefile.am  Makefile.in
data/images/icons/: Makefile.am  Makefile.in  icon.xpm  tuxmath.hqx  tuxmath.ico.old
data/images/igloos/: Makefile.am  Makefile.in
data/images/penguins/: Makefile.am  Makefile.in
data/images/schoolmode/: Makefile.am  lessonData.xml
data/images/sprites/: Makefile  Makefile.am  Makefile.in  icon-bak.xcf  icon-bkg.xcf
data/images/status/: Makefile.am  Makefile.in
data/images/title/: Makefile.am  Makefile.in
data/images/tux/: Makefile.am  Makefile.in
data/menus/: Makefile.am  Makefile.in  level_menu.xml  main_menu.xml  menu_strings  update-po.sh
data/missions/: Makefile.am  Makefile.in  demo  options
data/missions/arcade/: Makefile.am  Makefile.in  ace  commando  ranger  scout  space_cadet
data/missions/campaign/: Makefile.am  Makefile.in  campaign
data/missions/campaign/ace/: Makefile.am  Makefile.in  ace  bonus  round1  round2  round3
data/missions/campaign/cadet/: Makefile.am  Makefile.in  bonus  cadet  round1  round2  round3
data/missions/campaign/commando/: Makefile.am  Makefile.in  commando  round1  round2  round3
data/missions/campaign/ranger/: Makefile.am  Makefile.in  bonus  ranger  round1  round2  round3
data/missions/campaign/scout/: Makefile.am  Makefile.in  bonus  round1  round2  round3  scout
data/missions/lessons/: Makefile.am  Makefile.in  descr_lessons  lesson00  lesson01  lesson02  lesson03  lesson04  lesson05  lesson06  lesson07  lesson08  lesson08.1  lesson09  lesson10  lesson11  lesson12  lesson13  lesson14  lesson15  lesson16  lesson17  lesson18  lesson19  lesson20  lesson21  lesson22  lesson23  lesson24  lesson25  lesson26  lesson27  lesson28  lesson29  lesson30  lesson31  lesson32  lesson33  lesson34  lesson35  (+23 more)
data/missions/multiplay/: Makefile.am  Makefile.in  ace  commando  mpoptions  ranger  scout  space_cadet
data/sounds/: Makefile.am  Makefile.in  README
debian/: changelog  control  copyright  manpages  menu  rules  tuxmath-data.docs  tuxmath-data.install  tuxmath-data.links  tuxmath.6  tuxmath.desktop  tuxmath.dirs  tuxmath.docs  watch  (+4 more)
doc/: CMakeLists.txt  GPL_VERSIONS  INSTALL  INSTALL.txt  Makefile.am  Makefile.in  README  README.txt  README_DATA_LICENSES  README_DATA_LICENSES.TXT  TODO  TODO.txt  changelog
doc/html user guide/: USAGE  make.bat
doc/html user guide/source/: conf.py  factoroids.rst  howtoplay.rst  index.rst  installing.rst  moreinfo.rst  starting.rst
docs/: CHANGES.txt  INSTALL.txt  Makefile.am  README.txt  README_DATA_LICENSES.TXT  TODO.txt  changelog
intl/: CMakeLists.txt  ChangeLog  VERSION  intl_config.h.cmake  localename.c  plural.c
linebreak/: CMakeLists.txt  Makefile.am  Makefile.in  cpfiles  linebreak.c  linebreak_config.h.cmake  unistr.h
linebreak/unistr/: u16-mbtouc-unsafe-aux.c  u16-mbtouc-unsafe.c  u8-mbtouc-aux.c  u8-mbtouc-unsafe-aux.c  u8-mbtouc-unsafe.c  u8-uctomb-aux.c
macosx/: CMakeLists.txt  Info.plist  Makefile  SDLMain.m
macosx/English.lproj/: InfoPlist.strings
macosx/TuxMath.xcodeproj/: project.pbxproj  staff.mode1  staff.pbxuser
server/: Makefile.am  mathcards.c  mathcards.h  server.c  server.h  testclient.c  testclient.h  transtruct.h
src/: CMakeLists.txt  ConvertUTF.c  ConvertUTF.h  Makefile.am  Makefile.in  SDL_extras.c  SDL_extras.h  SDL_rotozoom.c  SDL_rotozoom.h  alphabet.c  audio.c  campaign.c  campaign.h  comets.c  comets.h  comets_graphics.c  comets_graphics.h  compiler.h  config.c  config.h  convert_utf.c  convert_utf.h  credits.c  credits.h  draw_utils.c  draw_utils.h  exercise_mathcards  exercise_mathcards.c  factoroids.c  factoroids.h  factoroids_graphics.c  factoroids_graphics.h  factroids.c  factroids.h  fileops.c  fileops.h  fileops_media.c  frame_counter.c  frame_counter.h  game.c  (+76 more)
src/.deps/: credits.Po  fileops.Po  game.Po  mathcards.Po  options.Po  playsound.Po  setup.Po  title.Po  tuxmath.Po
src/bayesian/: USAGE  bayes_test.c  bayesian_network.c  bayesian_network.h  bayesian_structure.c  bayesian_structure.h  digraph.c  digraph_bayesian.c  digraph_bayesian.h  digraph_tester.c  graph.h  inference.c  inference.h  inference_poly.c  inference_poly.h
src/po/: Makefile.am  POTFILES.in  README  lessons_desc.txt  nb.po  nn.po  tuxmath.pot  update-po.sh
src/tux4kidsadmin/: tux4kidsadmin.pro
src/tux4kidsadmin/plugins/: pluginInterface.h
src/tux4kidsadmin/plugins/dummy/: dummy.cpp  dummy.h  dummy.pro
src/tux4kidsadmin/src/: main.cpp  mainController.cpp  mainController.h  mainWindow.cpp  mainWindow.h  src.pro
src/tux4kidsadmin/translations/: tux4kidsadmin_pl.ts
trunk/doc/: CMakeLists.txt  README.txt  changelog
(+153 files in other folders)
